--- a/source/lightcrafts/resources/com/lightcrafts/utils/resources/Version.properties
+++ b/source/lightcrafts/resources/com/lightcrafts/utils/resources/Version.properties
@@ -1,9 +1,9 @@
 app-name=LightZone
-app-URL=http://www.lightcrafts.com/products/lightzone/
+app-URL=http://lightzoneproject.org/node/2/
 
-company-name=Light Crafts, Inc.
-company-URL=http://www.lightcrafts.com/
+company-name=LightZone Project
+company-URL=http://lightzoneproject.org/
 
-help-URL=http://www.lightcrafts.com/help/
+help-URL=http://lightzoneproject.org/node/35/
 
-VideoLearningCenter-URL=http://www.lightcrafts.com/learning/
+VideoLearningCenter-URL=http://lightzoneproject.org/node/35/
